--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "consign": "^0.1.6",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "express-validator": "^5.2.0",
     "jquery": "^3.3.1",
     "mongoose": "^5.0.16",
